--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "ebsp/resting",
     "require": {
-        "laravel/framework": "^5.5"
+        "laravel/framework": "^5.7"
     },
     "authors": [
         {
@@ -32,7 +32,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require-dev": {
-        "phpunit/phpunit": "^7.4"
+        "phpunit/phpunit": "^7.4",
+        "orchestra/testbench": "^3.8"
     },
     "scripts": {
     	"coverage": "phpunit --coverage-html ./docs/coverage"
