--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "ebsp/resting",
     "require": {
-        "laravel/framework": "^5.7|^6.0.0"
+        "laravel/framework": "6.*"
     },
     "authors": [
         {
@@ -32,8 +32,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require-dev": {
-        "phpunit/phpunit": "^7.4",
-        "orchestra/testbench": "^3.8"
+        "phpunit/phpunit": "9.0.0",
+        "orchestra/testbench": "^4.0"
     },
     "scripts": {
     	"coverage": "phpunit --coverage-html ./docs/coverage"
