--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "ebsp/resting",
     "require": {
-        "laravel/framework": "^5.7|^6.0.0"
+        "laravel/framework": "^5.7"
     },
     "authors": [
         {
