throw validation exception when IntField encounters a non-numeric string

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "ebsp/resting",
     "description": "Simple REST library for Laravel",
     "require": {
-        "laravel/framework": "^5.7 || ^6.0 || ^7.0"
+        "laravel/framework": "^5.7 || ^6.0 || ^7.0",
+        "codeception/assert-throws": "^1.0"
     },
     "authors": [
         {
