--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "ebsp/resting",
     "description": "Simple REST library for Laravel",
     "require": {
-        "laravel/framework": "^5.7 || ^6.0 || ^7.0 || ^8.0",
+        "laravel/framework": "^7.0 || ^8.0",
         "codeception/assert-throws": "^1.0"
     },
     "authors": [
@@ -34,8 +34,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require-dev": {
-        "phpunit/phpunit": "9.0.0",
-        "orchestra/testbench": "^4.0"
+        "phpunit/phpunit": "9.5.0",
+        "orchestra/testbench": "^6.3"
     },
     "scripts": {
     	"coverage": "phpunit --coverage-html ./docs/coverage"
