--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Simple REST library for Laravel",
     "require": {
         "php": "^7.0 || ^8.0",
-        "laravel/framework": "^7.0 || ^8.0",
+        "laravel/framework": "^7.0 || ^8.0 || ^9.0",
         "ext-json": "*"
     },
     "authors": [
