--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
     "name": "ebsp/resting",
     "description": "Simple REST library for Laravel",
     "require": {
-        "php": "^7.0 || ^8.0",
-        "laravel/framework": "^7.0 || ^8.0 || ^9.0",
+        "php": "^8.0",
+        "laravel/framework": "^8.0|^9.0",
         "ext-json": "*"
     },
     "authors": [
@@ -35,11 +35,11 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require-dev": {
-        "phpunit/phpunit": "9.5.0",
+        "phpunit/phpunit": "^8.0|^9.0",
         "orchestra/testbench": "^6.3",
         "jchook/phpunit-assert-throws": "^1.0"
     },
     "scripts": {
-    	"coverage": "phpunit --coverage-html ./docs/coverage"
+        "coverage": "phpunit --coverage-html ./docs/coverage"
     }
 }
