--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -3,6 +3,8 @@ name: build
 on:
   pull_request:
     branches: [master]
+  schedule:
+    - cron: 0 3 * * 1 # “At 03:00 on Monday.”
 
 jobs:
   build:
