--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -38,4 +38,4 @@ jobs:
         run: composer install --prefer-dist --no-progress --no-suggest
 
       - name: Run test suite
-        run: ./vendor/bin/phpunit
+        run: ./vendor/bin/phpunit --testdox
