--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Check if mergeable
-        run: git merge origin/master --no-commit --ff --stat --verbose
+        run: git merge origin/master --no-commit --stat --verbose
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
