--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Check if mergeable
         run: git merge origin/master --no-commit --stat --verbose
