--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Simple REST library for Laravel",
     "require": {
         "php": "^8.0",
-        "laravel/framework": "^8.0|^9.0",
+        "laravel/framework": "^8.0|^9.0|^10.0",
         "ext-json": "*"
     },
     "authors": [
