--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -2,7 +2,7 @@ name: build
 
 on:
   pull_request:
-    branches: [master]
+    branches: [ master ]
 
 jobs:
   build:
@@ -11,9 +11,9 @@ jobs:
       max-parallel: 4
       fail-fast: false
       matrix:
-        operating-system: ["ubuntu-latest"]
-        php-versions: ["8.0", "8.1"]
-        phpunit-versions: ["latest"]
+        operating-system: [ "ubuntu-latest" ]
+        php-versions: [ "8.2" ]
+        phpunit-versions: [ "latest" ]
 
     steps:
       - uses: actions/checkout@v3
