--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     "require-dev": {
         "phpunit/phpunit": "^8.0|^9.0",
         "orchestra/testbench": "^6.3",
-        "jchook/phpunit-assert-throws": "^1.0"
+        "jchook/phpunit-assert-throws": "^1.0",
+        "dms/phpunit-arraysubset-asserts": "^0.5.0"
     },
     "scripts": {
         "coverage": "phpunit --coverage-html ./docs/coverage"
